compiler/testData/diagnostics/tests/deprecated/deprecatedSinceKotlin/deprecatedSinceKotlinOutsideKotlinPackage.kt
// FIR_IDENTICAL
package foo.bar

@Deprecated("")
@<!DEPRECATED_SINCE_KOTLIN_OUTSIDE_KOTLIN_SUBPACKAGE!>DeprecatedSinceKotlin<!>("1.3")
fun test() {}